fix z-index mixin

--- a/src/_positioning.scss
+++ b/src/_positioning.scss
@@ -10,7 +10,7 @@ $z-indexes: (
 
 @mixin z-index($name) {
   @if index($z-indexes, $name) {
-    @return (length($z-indexes) - index($z-indexes, $name)) + 1;
+    z-index: (length($z-indexes) - index($z-indexes, $name)) + 1;
   }
   @else {
     @warn 'There is no item "#{$name}" in this list; choose one of: #{$z-indexes}';
